changed to prevent card overlap when resizing or on small screens

--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ body {
     flex-direction: column;
     height: 450px;
     width: 325px;
+    min-width: 325px;
 }
 .fixed-height-card .card-content {
     display: flex;
